--- a/microservicecloud-api/pom.xml
+++ b/microservicecloud-api/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>microsevicecloud-api</artifactId>
+    <artifactId>microservicecloud-api</artifactId>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
