--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,8 @@
     <artifactId>microservicecloud</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>microsevicecloud-api</module>
+        <module>microservicecloud-api</module>
+        <module>microservicecloud-provider-dept-8001</module>
     </modules>
 
     <packaging>pom</packaging>
